--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
+  <style>
+   body {
+    background:  url(img/fon4.png); 
+   }
+  </style>
   <body>
     
       <form class="js-send">
