--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     
       <form class="js-send">
-        <input type="text" placeholder="Enter text" class="type-1"/>
+        <input type="text" placeholder="Введіть число" class="type-1"/>
         
 <div class="button">
         <button type="submit" class="pressed-button">Send</button>
